Fix some unified build errors https://bugs.webkit.org/show_bug.cgi?id=225594

Reviewed by Wenson Hsieh.

* UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.h:
* UIProcess/ios/WKTextSelectionRect.mm:
* UIProcess/mac/WKTextInputWindowController.mm:


Canonical link: https://commits.webkit.org/237540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277273 268f45cc-cd09-0410-ab3c-d52691b4dbfc